package sample;

interface ISaver {
    void save();
}
