package sample;

import java.util.ArrayList;

public class MockingSaver implements ISaver {
    public void save() {

    }
}
